1121: Cleanup
https://github.com/SecureApiGateway/SecureApiGateway/issues/1121